syntax = "proto3";
package tendermint.spn.monitoringp;

import "gogoproto/gogo.proto";
import "monitoringp/params.proto";
import "monitoringp/consumer_client_id.proto";
import "monitoringp/connection_channel_id.proto";
import "monitoringp/monitoring_info.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/tendermint/spn/x/monitoringp/types";

// GenesisState defines the monitoringp module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  ConsumerClientID consumerClientID = 3;
  ConnectionChannelID connectionChannelID = 4;
  MonitoringInfo monitoringInfo = 5;
  // this line is used by starport scaffolding # genesis/proto/state
}
