syntax = "proto3";
package spn.monitoringp;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "spn/monitoringp/params.proto";
import "spn/monitoringp/consumer_client_id.proto";
import "spn/monitoringp/connection_channel_id.proto";
import "spn/monitoringp/monitoring_info.proto";

option go_package = "github.com/tendermint/spn/x/monitoringp/types";

// Query defines the gRPC querier service.
service Query {
  // Queries a ConsumerClientID by index.
  rpc ConsumerClientID(QueryGetConsumerClientIDRequest) returns (QueryGetConsumerClientIDResponse) {
    option (google.api.http).get = "/tendermint/spn/monitoringp/consumer_client_id";
  }

  // Queries a ConnectionChannelID by index.
  rpc ConnectionChannelID(QueryGetConnectionChannelIDRequest) returns (QueryGetConnectionChannelIDResponse) {
    option (google.api.http).get = "/tendermint/spn/monitoringp/connection_channel_id";
  }

  // Queries a MonitoringInfo by index.
  rpc MonitoringInfo(QueryGetMonitoringInfoRequest) returns (QueryGetMonitoringInfoResponse) {
    option (google.api.http).get = "/tendermint/spn/monitoringp/monitoring_info";
  }

  // Params queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tendermint/spn/monitoringp/params";
  }
}

message QueryGetConsumerClientIDRequest {}

message QueryGetConsumerClientIDResponse {
  ConsumerClientID ConsumerClientID = 1 [(gogoproto.nullable) = false];
}

message QueryGetConnectionChannelIDRequest {}

message QueryGetConnectionChannelIDResponse {
  ConnectionChannelID ConnectionChannelID = 1 [(gogoproto.nullable) = false];
}

message QueryGetMonitoringInfoRequest {}

message QueryGetMonitoringInfoResponse {
  MonitoringInfo MonitoringInfo = 1 [(gogoproto.nullable) = false];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}
